{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 91,
  "lineage": "2c949ef6-ad96-f507-ccce-e673f3b2c0de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-EC2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0283a57753b18025b",
            "arn": "arn:aws:ec2:us-east-2:242451082977:instance/i-02018232b25092d36",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02018232b25092d36",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bcff09594eb2bc2e",
            "private_dns": "ip-10-0-1-137.us-east-2.compute.internal",
            "private_ip": "10.0.1.137",
            "public_dns": "ec2-3-145-83-196.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.83.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03f40feb54bbb50fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc31f7e57d0a407c",
            "tags": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ee031491572bfbc1"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.allow-ssh",
            "aws_subnet.myvpc-public-subnet",
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myvpc-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:242451082977:internet-gateway/igw-0eed4aac6f09e9566",
            "id": "igw-0eed4aac6f09e9566",
            "owner_id": "242451082977",
            "tags": {
              "Name": "MY-VPC"
            },
            "vpc_id": "vpc-0e3d4e8a740c5b07f"
          },
          "dependencies": [
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myvpc-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:242451082977:route-table/rtb-041dde38a34b84f4f",
            "id": "rtb-041dde38a34b84f4f",
            "owner_id": "242451082977",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eed4aac6f09e9566",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myvpc-public-subnet"
            },
            "vpc_id": "vpc-0e3d4e8a740c5b07f"
          },
          "dependencies": [
            "aws_internet_gateway.myvpc-igw",
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myvpc-public-subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e88c55536dc71733",
            "route_table_id": "rtb-041dde38a34b84f4f",
            "subnet_id": "subnet-0bc31f7e57d0a407c"
          },
          "dependencies": [
            "aws_internet_gateway.myvpc-igw",
            "aws_route_table.myvpc-public",
            "aws_subnet.myvpc-public-subnet",
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:242451082977:security-group/sg-0ee031491572bfbc1",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee031491572bfbc1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "242451082977",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3d4e8a740c5b07f"
          },
          "dependencies": [
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc-private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:242451082977:subnet/subnet-06ef1747eb1a9b0ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-06ef1747eb1a9b0ca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242451082977",
            "tags": {
              "Name": "myvpc-private-subnet"
            },
            "tags_all": {
              "Name": "myvpc-private-subnet"
            },
            "vpc_id": "vpc-0e3d4e8a740c5b07f"
          },
          "dependencies": [
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:242451082977:subnet/subnet-0bc31f7e57d0a407c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0bc31f7e57d0a407c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "242451082977",
            "tags": {
              "Name": "myvpc-public-subnet"
            },
            "tags_all": {
              "Name": "myvpc-public-subnet"
            },
            "vpc_id": "vpc-0e3d4e8a740c5b07f"
          },
          "dependencies": [
            "aws_vpc.MY-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MY-VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:242451082977:vpc/vpc-0e3d4e8a740c5b07f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0553b5cd6345c13da",
            "default_route_table_id": "rtb-0ea10a1efc5bbec82",
            "default_security_group_id": "sg-04245e18a320615e2",
            "dhcp_options_id": "dopt-09b29ee8ea3cc07bc",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e3d4e8a740c5b07f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ea10a1efc5bbec82",
            "owner_id": "242451082977",
            "tags": {
              "Name": "MY-VPC"
            },
            "tags_all": {
              "Name": "MY-VPC"
            }
          }
        }
      ]
    }
  ]
}